# another-space-game

./: Cargo.toml
assets/shaders/: post_process.wgsl
src/: main.rs
src/bundles/: cb_bundle.rs  mod.rs  player_bundle.rs  settings_bundle.rs
src/components/: celestial_body.rs  mod.rs  player_component.rs  player_controller.rs
src/components/celestial_body/: cb_class.rs  cb_force.rs  cb_initial_velocity.rs  cb_mass.rs  cb_name.rs  cb_radius.rs  cb_spin.rs  cb_surface_gravity.rs  cb_velocity.rs  mod.rs
src/components/player/: mod.rs  p_mass.rs  p_name.rs
src/components/settings/: input.rs  mod.rs
src/components/uniforms/: atmosphere_settings.rs  mod.rs  view.rs
src/plugins/: mod.rs
src/plugins/player_plugin/: mod.rs  startup.rs  systems.rs  update.rs  utils.rs
src/plugins/player_plugin/movement/: foot.rs  ground.rs  mod.rs  spacesuit.rs
src/plugins/post_process_plugin/: mod.rs  pipeline.rs  post_process_node.rs  prepare.rs  queue.rs
src/plugins/post_processing_plugin/: mod.rs
src/plugins/post_processing_plugin/atmosphere/: startup.rs
src/plugins/space_plugin/: generate.rs  mod.rs  startup.rs  systems.rs  update.rs
src/plugins/space_plugin/generate/: celestial_body.rs  mod.rs  planet.rs  star.rs  starsystem.rs
src/plugins/voxel_plugin/: mod.rs  update.rs
src/plugins/voxel_plugin/components/: mod.rs  octree_object.rs
src/resources/: mod.rs  player.rs  post_process.rs  space.rs
src/resources/settings/: input.rs
