[package]
name = "another-space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.22.0", features = [ "simd-stable", "debug-render-3d" ] }
rand = "0.8.5"
noise = "0.8.2"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3